composer json and lock update

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "autoload": {
+        "config":{
+            "platform": {
+                "php": "7.2"
+            }
+        },
         "classmap": [
             "src/"
         ]
