--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "mockery/mockery": "^1.3"
+    },
+    "require": {
     }
 }
